--- a/LIST/TYPE/001_コーポレートサイト/css/style.css
+++ b/LIST/TYPE/001_コーポレートサイト/css/style.css
@@ -199,7 +199,7 @@ a {
 }
 
 .buisiness .container .item-first {
-  margin: 5% 100px 0 auto;
+  margin: 0 90px 0 auto;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: first;
@@ -212,8 +212,12 @@ a {
   font-size: 3rem;
 }
 
+.buisiness .container .item-first__txt {
+  font-size: 1.5rem;
+}
+
 .buisiness .container .item-second {
-  margin: 5% auto 0 100px;
+  margin: 2% 0 0 50px;
   -ms-grid-row: 2;
   -ms-grid-column: 2;
   grid-area: second;
@@ -226,8 +230,12 @@ a {
   font-size: 3rem;
 }
 
+.buisiness .container .item-second__txt {
+  font-size: 1.5rem;
+}
+
 .buisiness .container .item-third {
-  margin: 5% 100px 10% auto;
+  margin: 8% 90px 0 auto;
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: third;
@@ -240,8 +248,12 @@ a {
   font-size: 3rem;
 }
 
+.buisiness .container .item-third__txt {
+  font-size: 1.5rem;
+}
+
 .buisiness .container .item-forth {
-  margin: 5% auto 10% 100px;
+  margin: 10% 0 10% 50px;
   -ms-grid-row: 3;
   -ms-grid-column: 2;
   grid-area: forth;
@@ -252,6 +264,10 @@ a {
 .buisiness .container .item-forth__ttl {
   color: #1688BF;
   font-size: 3rem;
+}
+
+.buisiness .container .item-forth__txt {
+  font-size: 1.5rem;
 }
 
 .recruit {
