--- a/css/styele.css
+++ b/css/styele.css
@@ -100,35 +100,35 @@ ul, li {
   }
 }
 
-@-webkit-keyframes kaiten {
+@-webkit-keyframes huwahuwa {
   0% {
-    -webkit-transform: scale(1) rotate(90deg);
-            transform: scale(1) rotate(90deg);
+    -webkit-transform: scale(1) translateY(0vh);
+            transform: scale(1) translateY(0vh);
   }
   50% {
-    -webkit-transform: scale(1) rotate(90deg);
-            transform: scale(1) rotate(90deg);
+    -webkit-transform: scale(1) translateY(1vh);
+            transform: scale(1) translateY(1vh);
   }
   100% {
     opacity: 1;
-    -webkit-transform: scale(1) rotate(0deg);
-            transform: scale(1) rotate(0deg);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
-@keyframes kaiten {
+@keyframes huwahuwa {
   0% {
-    -webkit-transform: scale(1) rotate(90deg);
-            transform: scale(1) rotate(90deg);
+    -webkit-transform: scale(1) translateY(0vh);
+            transform: scale(1) translateY(0vh);
   }
   50% {
-    -webkit-transform: scale(1) rotate(90deg);
-            transform: scale(1) rotate(90deg);
+    -webkit-transform: scale(1) translateY(1vh);
+            transform: scale(1) translateY(1vh);
   }
   100% {
     opacity: 1;
-    -webkit-transform: scale(1) rotate(0deg);
-            transform: scale(1) rotate(0deg);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -186,6 +186,14 @@ ul, li {
 .header .container .left__item {
   text-align: center;
   color: #393e46;
+  font-size: 4rem;
+  letter-spacing: 10px;
+}
+
+.header .container .middle {
+  margin: 5vh 0 0 0;
+  padding: 0 20vw;
+  border-top: 0.1vw solid #393e46;
 }
 
 .header .container .right {
@@ -204,6 +212,8 @@ ul, li {
 
 .header .container .right__item__three:hover {
   opacity: 0.5;
+  -webkit-transition: all 1s;
+  transition: all 1s;
 }
 
 .header .container .right__item__sns {
@@ -223,6 +233,8 @@ ul, li {
 
 .header .container .right__item__sns-github:hover, .header .container .right__item__sns-twitter:hover, .header .container .right__item__sns-instagram:hover {
   opacity: 0.5;
+  -webkit-transition: all 1s;
+  transition: all 1s;
 }
 
 .header .container .right__item__arrow {
@@ -230,11 +242,18 @@ ul, li {
   width: 20%;
 }
 
-.header .container .right__item__arrow:hover {
-  opacity: 0.5;
+.header .container .right__item__arrow-1 {
+  -webkit-animation: yaji 4s ease-in-out infinite;
+          animation: yaji 4s ease-in-out infinite;
 }
 
-@media screen and (min-width: 400px) {
+.header .container .right__item__arrow:hover {
+  opacity: 0.5;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+@media screen and (min-width: 300px) {
   .header .container {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
@@ -242,7 +261,6 @@ ul, li {
   .header .container .left__item {
     margin: 10vh 0 0 0;
     letter-spacing: 3px;
-    font-size: 3rem;
   }
   .header .container .middle {
     margin: 5vh 0 0 0;
@@ -385,6 +403,8 @@ ul, li {
 }
 
 .main .nav {
+  -webkit-animation: huwahuwa 3s infinite;
+          animation: huwahuwa 3s infinite;
   z-index: 2;
   position: -webkit-sticky;
   position: sticky;
@@ -393,18 +413,33 @@ ul, li {
   background-color: 0;
 }
 
-.main .nav__burger-1, .main .nav__burger-2, .main .nav__burger-3 {
+.main .nav__burger-1 {
   width: 3%;
   display: block;
-  font-size: 10rem;
   line-height: 1rem;
-  border: 1px #00adb5 solid;
-  margin: 1% 0 0 96%;
+  border: 4px #00adb5 solid;
+  margin-left: 96%;
+}
+
+.main .nav__burger-2 {
+  width: 3%;
+  display: block;
+  line-height: 1rem;
+  border: 4px #00adb5 solid;
+  margin: 2px 0 0 96%;
+}
+
+.main .nav__burger-3 {
+  width: 3%;
+  display: block;
+  line-height: 1rem;
+  border: 4px #00adb5 solid;
+  margin: 2px 0 0 96%;
 }
 
 .main .ware {
   height: 92vh;
-  margin: 1% 5% 0 5%;
+  margin: 3% 5% 0 5%;
   position: relative;
 }
 
@@ -413,112 +448,169 @@ ul, li {
 }
 
 .main .ware__num {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   z-index: 1;
   top: 0;
   left: 0;
-  font-size: 10rem;
-  margin: 5%;
-  padding: 2% 3%;
-  text-align: center;
+  height: 10%;
+  width: 100%;
+  font-size: 15rem;
+  padding: 0 8% 10% 0;
+  text-align: right;
   color: #eeeeee;
   background-color: #00adb5;
 }
 
 .main .ware__about {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   top: 0;
   left: 0;
+  height: 81.4vh;
+  width: 100%;
   font-size: 2rem;
-  margin: 12%;
-  padding: 16% 18%;
+  padding: 20.9% 22%;
   color: white;
   background-color: #393e46;
   opacity: 0.8;
 }
 
 .main .skill {
-  height: 100vh;
+  height: 92vh;
   background-color: #222831;
   position: relative;
+  margin: 5%;
 }
 
 .main .skill__num {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   z-index: 1;
   top: 0;
-  left: 5%;
-  font-size: 10rem;
-  margin: 5%;
-  padding: 2% 3%;
-  text-align: center;
+  left: 0;
+  height: 10%;
+  width: 100%;
+  font-size: 15rem;
+  padding: 0 8% 10% 0;
+  text-align: right;
   color: #eeeeee;
   background-color: #00adb5;
 }
 
-.main .skill__item {
+.main .skill__about {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   top: 0;
-  left: 5%;
+  left: 0;
+  height: 100%;
+  width: 100%;
   font-size: 2rem;
-  margin: 12%;
-  padding: 16% 36%;
-  text-align: center;
+  padding: 20.9% 22%;
   color: #eeeeee;
   background-color: #393e46;
   opacity: 0.8;
 }
 
 .main .works {
-  height: 100vh;
+  height: 92vh;
   position: relative;
-  background-color: #eeeeee;
+  background-color: #222831;
+  margin: 10% 5% 5% 5%;
 }
 
 .main .works__num {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   z-index: 1;
   top: 0;
-  left: 5%;
-  font-size: 10rem;
-  margin: 5%;
-  padding: 2% 3%;
-  text-align: center;
+  left: 0;
+  height: 10%;
+  width: 100%;
+  font-size: 15rem;
+  padding: 0 8% 10% 0;
+  text-align: right;
   color: #eeeeee;
   background-color: #00adb5;
 }
 
-.main .works__item {
+.main .works__about {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   top: 0;
-  left: 5%;
+  left: 0;
+  height: 100%;
+  width: 100%;
   font-size: 2rem;
-  margin: 12%;
-  padding: 16% 36%;
-  text-align: center;
+  padding: 20.9% 22%;
   color: #eeeeee;
   background-color: #393e46;
   opacity: 0.8;
 }
 
 .main .contact {
-  height: 100vh;
+  height: 92vh;
+  position: relative;
   background-color: #222831;
+  margin: 10% 5% 5% 5%;
+}
+
+.main .contact__num {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  height: 10%;
+  width: 100%;
+  font-size: 15rem;
+  padding: 0 8% 10% 0;
+  text-align: right;
+  color: #eeeeee;
+  background-color: #00adb5;
+}
+
+.main .contact__about {
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  font-size: 2rem;
+  padding: 20.9% 22%;
+  color: #eeeeee;
+  background-color: #393e46;
+  opacity: 0.8;
 }
 
 .footer {
   height: 100vh;
-  background-color: #eeeeee;
-}
-
-.footer .three {
-  height: 85%;
-  text-align: center;
+  background-color: #222831;
 }
 
 .footer .nav {
   height: 10%;
   background-color: #00adb5;
+}
+
+.footer .nav__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .footer .copy {
