--- a/css/styele.scss
+++ b/css/styele.scss
@@ -13,7 +13,7 @@ ul,li {
 }
 
 $breakpoints: (
-  'sm': 'screen and (min-width: 400px)',
+  'sm': 'screen and (min-width: 300px)',
   'md': 'screen and (min-width: 768px)',
   'lg': 'screen and (min-width: 1000px)',
   'xl': 'screen and (min-width: 1200px)',
@@ -61,16 +61,16 @@ $breakpoints: (
   }
 }
 
-@keyframes kaiten {
+@keyframes huwahuwa {
   0% {
-    transform: scale(1) rotate(90deg);
+    transform: scale(1) translateY(0vh);
   }
   50% {
-    transform: scale(1) rotate(90deg);
+    transform: scale(1) translateY(1vh);
   }
   100% {
     opacity: 1;
-    transform: scale(1) rotate(0deg);
+    transform: scale(1);
   }
 }
 
@@ -101,7 +101,14 @@ $breakpoints: (
       &__item {
         text-align: center;
         color: #393e46;
+        font-size: 4rem;
+        letter-spacing: 10px;
       }
+    }
+    .middle {
+      margin: 5vh 0 0 0;
+      padding: 0 20vw;
+      border-top: 0.1vw solid #393e46;
     }
     .right {
       width: 100%;
@@ -113,6 +120,7 @@ $breakpoints: (
           margin: 8vh auto 0vh auto;
           &:hover {
             opacity: 0.5;
+            transition: all 1s;
           }
         }
         &__sns {
@@ -125,6 +133,7 @@ $breakpoints: (
             margin: 0 0.1vw;
             &:hover {
               opacity: 0.5;
+              transition: all 1s;
             }
           }
           &-twitter {
@@ -137,8 +146,12 @@ $breakpoints: (
         &__arrow {
           margin: 0 auto;
           width: 20%;
+          &-1 {
+            animation: yaji 4s ease-in-out infinite;
+          }
           &:hover {
             opacity: 0.5;
+            transition: all 1s;
           }
         }
       }
@@ -149,7 +162,6 @@ $breakpoints: (
         &__item {
           margin: 10vh 0 0 0;
           letter-spacing: 3px;
-          font-size: 3rem;
         }
       }
       .middle {
@@ -281,6 +293,7 @@ $breakpoints: (
 
 .main {
   .nav {
+    animation: huwahuwa 3s infinite;
     z-index: 2;
     position: sticky;
     top: 30px;
@@ -290,127 +303,175 @@ $breakpoints: (
       &-1 {
         width: 3%;
         display: block;
-        font-size: 10rem;
         line-height: 1rem;
-        border: 1px #00adb5 solid;
-        margin: 1% 0 0 96%;
+        border: 4px #00adb5 solid;
+        margin-left:96%;
       }
       &-2 {
-        @extend .nav__burger-1;
+        width: 3%;
+        display: block;
+        line-height: 1rem;
+        border: 4px #00adb5 solid;
+        margin: 2px 0 0 96%;
       }
       &-3 {
-        @extend .nav__burger-1;
+        width: 3%;
+        display: block;
+        line-height: 1rem;
+        border: 4px #00adb5 solid;
+        margin: 2px 0 0 96%;
       }
     }
   }
   .ware {
     height: 92vh;
-    margin: 1% 5% 0 5%;
+    margin: 3% 5% 0 5%;
     position: relative;
     &__ware {
       z-index: -1;
     }
     &__num {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
       position: absolute;
       z-index: 1;
       top: 0;
       left: 0;
-      font-size: 10rem;
-      margin: 5%;
-      padding: 2% 3%;
-      text-align: center;
+      height: 10%;
+      width: 100%;
+      font-size: 15rem;
+      padding: 0 8% 10% 0;
+      text-align: right;
       color: #eeeeee;
       background-color: #00adb5;
     }
     &__about {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
       position: absolute;
       top: 0;
       left: 0;
+      height: 81.4vh;
+      width: 100%;
       font-size: 2rem;
-      margin: 12%;
-      padding: 16% 18%;
-      // text-align: center;
+      padding: 20.9% 22%;
       color: white;
       background-color: #393e46;
       opacity: 0.8;
     }
   }
   .skill {
-    height: 100vh;
+    height: 92vh;
     background-color: #222831;
     position: relative;
+    margin: 5%;
     &__num {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
       position: absolute;
       z-index: 1;
       top: 0;
-      left: 5%;
-      font-size: 10rem;
-      margin: 5%;
-      padding: 2% 3%;
-      text-align: center;
+      left: 0;
+      height: 10%;
+      width: 100%;
+      font-size: 15rem;
+      padding: 0 8% 10% 0;
+      text-align: right;
       color: #eeeeee;
       background-color: #00adb5;
     }
-    &__item {
+    &__about {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
       position: absolute;
       top: 0;
-      left: 5%;
+      left: 0;
+      height: 100%;
+      width: 100%;
       font-size: 2rem;
-      margin: 12%;
-      padding: 16% 36%;
-      text-align: center;
+      padding: 20.9% 22%;
       color: #eeeeee;
       background-color: #393e46;
       opacity: 0.8;
     }
   }
   .works {
-    height: 100vh;
+    height: 92vh;
     position: relative;
-    background-color: #eeeeee;
+    background-color: #222831;
+    margin: 10% 5% 5% 5%;
     &__num {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
       position: absolute;
       z-index: 1;
       top: 0;
-      left: 5%;
-      font-size: 10rem;
-      margin: 5%;
-      padding: 2% 3%;
-      text-align: center;
+      left: 0;
+      height: 10%;
+      width: 100%;
+      font-size: 15rem;
+      padding: 0 8% 10% 0;
+      text-align: right;
       color: #eeeeee;
       background-color: #00adb5;
     }
-    &__item {
+    &__about {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
       position: absolute;
       top: 0;
-      left: 5%;
+      left: 0;
+      height: 100%;
+      width: 100%;
       font-size: 2rem;
-      margin: 12%;
-      padding: 16% 36%;
-      text-align: center;
+      padding: 20.9% 22%;
       color: #eeeeee;
       background-color: #393e46;
       opacity: 0.8;
     }
   }
   .contact {
-    height: 100vh;
+    height: 92vh;
+    position: relative;
     background-color: #222831;
+    margin: 10% 5% 5% 5%;
+    &__num {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      height: 10%;
+      width: 100%;
+      font-size: 15rem;
+      padding: 0 8% 10% 0;
+      text-align: right;
+      color: #eeeeee;
+      background-color: #00adb5;
+    }
+    &__about {
+      box-shadow: inset 0 10px 25px 0 rgba(238,238,238, .8);
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      font-size: 2rem;
+      padding: 20.9% 22%;
+      color: #eeeeee;
+      background-color: #393e46;
+      opacity: 0.8;
+    }
   }
 }
 
 .footer {
   height: 100vh;
-  background-color: #eeeeee;
+  background-color: #222831;
   .three {
-    height: 85%;
-    text-align: center;
-    .myCanvas {
-    }
   }
   .nav {
     height: 10%;
     background-color: #00adb5;
+    &__item {
+      display: flex;
+      flex: 1;
+      justify-content: space-around;
+    }
   }
   .copy {
     display: inline-block;
